<resources>
    <string name="titleModel">赵骰模块</string>
    <!-- Preference Titles -->
    <string name="baseNotice_ERROR">1.加 群978563358 群323956301(可能满)\n2.获取修改版TIM\n3.安装TIM,进入TIM设置即可正常使用)</string>
    <string name="baseNotice_DEVOLOPER">软件开发者：赵怡然 \n 群号:323956301 \n 保留所有解释权。\n适配QQ8.0.0–8.3.0(最佳),TIM3.0.0(最佳)</string>
    <!-- Messages Preferences -->
    <string name="switch_openDice">打开COC骰子</string>
    <string name="switch_publicMode">公骰模式</string>
    <string name="switch_handleMySelf">响应自己的指令</string>
    <string name="switch_keyAutoReply">关键词自动回复</string>
    <string name="customConfig">自定义配置(长按置为默认配置)</string>
    <string name="switch_wayToReply">引用原用户内容</string>
</resources>
