<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_layout"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/baseNotice_DEVOLOPER" />

    <Switch
        android:id="@+id/switch_openDice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_openDice" />
    <Switch
        android:id="@+id/switch_voiceRobot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_voiceRobot" />
    <Switch
        android:id="@+id/switch_handleMySelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_handleMySelf" />
    <Switch
        android:id="@+id/switch_keyAutoReply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_keyAutoReply" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customConfig" />

    <Spinner
        android:id="@+id/spinner_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editText_editValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor"
        android:autofillHints="" />

</LinearLayout>